Fix padding for vote button when seen on mobiles

--- a/assets/styles/application.css
+++ b/assets/styles/application.css
@@ -221,6 +221,7 @@ body {
 @media (max-width: 970px) {
   .vote {
     width: 100%;
+    padding-top: 10px;
   }
 }
 
